support edit and validate requests
